fix color-picker width on mobile

--- a/src/styles/_color-picker.scss
+++ b/src/styles/_color-picker.scss
@@ -225,12 +225,32 @@
       bottom: 65px;
       top: 105px;
       overflow: auto;
+      width: auto;
+      max-height: none;
       .jm-color-picker{
-
         #color-picker-place {
           width: 100%;
           height: 100%;
           margin: auto;
+        }
+      }
+      .jQWCP-wWheel {
+        float: none;
+        width: 281px;
+        height: 281px;
+        margin: 0 auto;
+      }
+      .tab-content{
+        .circle-picker{
+          width: 280px!important;
+          margin: 0 auto -23px!important;
+        }
+        .preinstalled-wrap, .last-usage-wrap{
+          margin-right: 0;
+          padding-left: 0;
+          >div>span>div{
+            margin-right: 12px !important;
+          }
         }
       }
     }
@@ -251,19 +271,7 @@
 @media all and (max-width: 375px) {
   .color-picker{
     .popover{
-      .tab-content{
-        .circle-picker{
-          width: 280px!important;
-          margin: 0 auto -23px!important;
-        }
-        .preinstalled-wrap, .last-usage-wrap{
-          margin-right: 0;
-          padding-left: 0;
-          >div>span>div{
-            margin-right: 12px !important;
-          }
-        }
-      }
+
     }
   }
 }
